--- a/Project-II/hotelreservation.html
+++ b/Project-II/hotelreservation.html
@@ -12,7 +12,7 @@
         In this application, I have created a simple Hotel Reservation form that will allow a user to enter information to book a room. The user must be able to enter their name, address, phone number and email. They must be able to select an arrival date, the select the number of nights to stay. They must also be able to enter the number of persons checking in and select from three room options that are available based on the number of persons entered. When they have entered the information, they should be informed if they are missing information, and a message will display in a label on the form to summarize their selection.
       </p>
       <p>
-      <p>Download Hotel Reservation Application from this link:  <a href="https://github.com/simarjitkaur?tab=repositories">Hotel Reservation App</a></p>
+      <p>Download Hotel Reservation Application from this link:  <a href="https://github.com/simarjitkaur/Hotel_Reservation_Application" target="_blank">Hotel Reservation App</a></p>
       <button><a href="project.html">Back</a></button>     
 </body>
 </html>
