--- a/Project-II/simarmem.html
+++ b/Project-II/simarmem.html
@@ -17,8 +17,9 @@
                     <b>Hometown: </b>Ludhiana,Punjab,India<br/>
                     <b>Current City: </b>Thunder Bay,Ontario,Canada<br/>
                     <b>Email: </b>kaursimarjit2143@gmail.com<br/>
-                    <b>Skype: </b>   <br/>
-                    <b>Git - Biography: </b>Username:simarjitkaur <br/>
+                    <b>Linked In: </b><a href="https://www.linkedin.com/in/simarjit-kaur-808a92198" target="_blank">https://www.linkedin.com/in/simarjit-kaur-808a92198</a><br/>
+                    <b>Skype: </b>kaursimarjit2143<br/>
+                    <b>Git - Biography: </b><a href="https://github.com/simarjitkaur" target="_blank">https://github.com/simarjitkaur</a> <br/>
                 </p>
             </td>
         </tr>
