--- a/Project-II/map.html
+++ b/Project-II/map.html
@@ -20,7 +20,8 @@
       <p>
         To create this application,I use many of the concepts I have learned in class.
       </p>
-      <p>Download application from this link:  <a href="https://github.com/simarjitkaur?tab=repositories">Population Map Application</a></p>
+      <p>Download application from this link:   <a href="https://github.com/simarjitkaur/Map_Application" target="_blank">Population Map Application</a></p>
       <button><a href="project.html">Back</a></button>     
+     
 </body>
 </html>
