--- a/Project-II/Home.html
+++ b/Project-II/Home.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="home.css">
 </head>
 <body>
+   <!-- creation of home page of company -->
   <div id="main-container">
     <div id="header-container1">
       <center><img src="images/logo.png"></center>
