--- a/Project-II/ethics.html
+++ b/Project-II/ethics.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="ethics.css">
 </head>
 <body>
+      <!--Ethics of the company -->
       <h3>Our Company Ethics</h3>
       <b>1. Commitment</b>
       <p>Not to be confused with committing to a particular delivery date or predefined set of functionality, commitment describes the trust the team places in the agile approach and its values. </p>
