--- a/Project-II/imagegallery.html
+++ b/Project-II/imagegallery.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="imagegallery.css">
 <script src="imagegallery.js"></script>
 </head>
+<!-- This file is uded to create empty div and call showimages function on form load -->
 <body onload="showImages()">
     <a id="back" href="Home.html">Go Back</a></button><h2>My Hobbies Portfolio</h2>
 <div id="main"> 
