--- a/Project-II/project.html
+++ b/Project-II/project.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
+         <!-- links for projects -->
         <center><h4>Simarjit Kaur Project History</h4></center>
         <table border="2px">
           <tr>
