--- a/Project-II/resume.html
+++ b/Project-II/resume.html
@@ -1,5 +1,6 @@
 <html>
   <body>
+     <!-- view and download resume -->
     <h3>Resume(Simarjit Kaur Gill)</h3>
     <h4>Professional Skills</h4>
         <ul>
