--- a/Project-II/services.html
+++ b/Project-II/services.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="services.css">
 </head>
 <body>
+     <!-- service page -->
  <table border="2px">
     <tr>
         <td>
