--- a/Project-II/simarmem.html
+++ b/Project-II/simarmem.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="members.css">
 </head>
 <body>
+       <!-- Information about member -->
       <h3>First Member</h3>
       <img src="images\simar.jpeg" class="center"><br>
       <table>
