--- a/Project-II/vision.html
+++ b/Project-II/vision.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="vision.css">
 </head>
 <body>
+       <!-- company vision page -->
       <h3>Our Vision</h3>
       <p>
         Our vision is to develop in a constant manner and grow as a major IT service provider to become a leading performer, in providing quality Web and Software Development solutions in the competitive global marketplace. Our professional, flexible and integrated process reflects in what we do. We always guide our customers to success.
