--- a/Project-II/career.html
+++ b/Project-II/career.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="vision.css">
 </head>
 <body>
+      <!--  create file to write career about company -->
       <h3>Career at our company</h3>
       <p>
         We offer dynamic career opportunities to individuals who like to work in a fast-paced IT environment. MacSyn is growing steadily and thus the need to expand the web development & design, Software Development. Working with the MacSyn team opens up a world of innovation, creativity and challenges.
