--- a/Project-II/hobbies.html
+++ b/Project-II/hobbies.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="hobbies.css">
 </head>
 <body>
+      <!--  -->
       <h2>My Hobbies</h2>
       <p> A hobby is an activity, interest, or pastime that is undertaken for pleasure or relaxation, done during one's own time.Ihave many hobbies like shopping,travelling,reading newspaper,making projects and spending time with family members.</p>
       <ol>
@@ -13,6 +14,7 @@
           <li>If anyone click on buttons he/she can chang the size of images,send any image at top,send any image at bottom,send images left and right also.</li>
         </ol>
       <h1>
+         <!--link to visit imagegallery  -->
         <a href="imagegallery.html" target="_blank">Click to visit My Image Gallery</a><br/><br/>
       </h1>    
 </body>
