--- a/Project-II/memportfolio.html
+++ b/Project-II/memportfolio.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
+       <!-- portfolio of the members -->
       <img src="images\simar.jpeg" class="center">
       <h3>Simarjit Kaur</h3>
       <h3>Visit following links....<br/>
